hlsdemux: Implement proper handling of discontinuities

It's not really correct yet for seeks but better than what
we had before.

See https://bugzilla.gnome.org/show_bug.cgi?id=695846