ext/hls/gsthlsdemux.h
@@ -94,6 +94,7 @@ struct _GstHLSDemux
   /* Position in the stream */
   GstClockTime position_shift;
   gboolean need_segment;
+  gboolean discont;
 
   /* Cache for the last key */
   gchar *key_url;
